--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="src\input\action\base\vector2_input_action.cpp" />
     <ClCompile Include="src\input\im_playing.cpp" />
     <ClCompile Include="src\input\input_mapping.cpp" />
+    <ClCompile Include="src\level\stage1.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\window.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="include\input\action\base\vector2_input_action.h" />
     <ClInclude Include="include\input\im_playing.h" />
     <ClInclude Include="include\input\input_mapping.h" />
+    <ClInclude Include="include\level\stage1.h" />
     <ClInclude Include="include\renderer.h" />
     <ClInclude Include="include\window.h" />
   </ItemGroup>
