feat: 型チェックができるように、入力アクションの基底クラスに仮想デストラクタを追加

--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\game_container.cpp" />
     <ClCompile Include="src\input\action\base\bool_input_action.cpp" />
+    <ClCompile Include="src\input\action\base\input_action.cpp" />
     <ClCompile Include="src\input\action\ia_fire.cpp" />
     <ClCompile Include="src\input\action\ia_move.cpp" />
     <ClCompile Include="src\input\action\base\vector2_input_action.cpp" />
