--- a/spaceshooter/spaceshooter.vcxproj.filters
+++ b/spaceshooter/spaceshooter.vcxproj.filters
@@ -36,10 +36,10 @@
     <ClCompile Include="src\input\input_mapping.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\input\action\base\bool_input_action.cpp">
+    <ClCompile Include="src\input\action\bool_input_action.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\input\action\base\vector2_input_action.cpp">
+    <ClCompile Include="src\input\action\vector2_input_action.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\input\action\ia_move.cpp">
@@ -54,7 +54,7 @@
     <ClCompile Include="src\level\stage1.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\input\action\base\input_action.cpp">
+    <ClCompile Include="src\input\action\input_action.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\time\timer.cpp">
@@ -71,55 +71,55 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\window.h">
+    <ClInclude Include="src\window.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\renderer.h">
+    <ClInclude Include="src\renderer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\game.h">
+    <ClInclude Include="src\game.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\game_container.h">
+    <ClInclude Include="src\game_container.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\actor\player.h">
+    <ClInclude Include="src\actor\player.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\input\input_mapping.h">
+    <ClInclude Include="src\input\input_mapping.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\input\action\base\input_action.h">
+    <ClInclude Include="src\input\action\input_action.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\input\action\base\bool_input_action.h">
+    <ClInclude Include="src\input\action\bool_input_action.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\input\action\base\vector2_input_action.h">
+    <ClInclude Include="src\input\action\vector2_input_action.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\common\vector2.h">
+    <ClInclude Include="src\common\vector2.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\input\action\ia_move.h">
+    <ClInclude Include="src\input\action\ia_move.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\input\action\ia_fire.h">
+    <ClInclude Include="src\input\action\ia_fire.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\input\im_playing.h">
+    <ClInclude Include="src\input\im_playing.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\level\stage1.h">
+    <ClInclude Include="src\level\stage1.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\time\timer.h">
+    <ClInclude Include="src\time\timer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\asset\asset_manager.h">
+    <ClInclude Include="src\asset\asset_manager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\texture\texture.h">
+    <ClInclude Include="src\texture\texture.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
