refactor: 不要なファイルを削除。

--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -136,7 +136,6 @@
     <ClCompile Include="src\actor\player.cpp" />
     <ClCompile Include="src\common\vector2.cpp" />
     <ClCompile Include="src\game.cpp" />
-    <ClCompile Include="src\game_container.cpp" />
     <ClCompile Include="src\input\action\bool_input_action.cpp" />
     <ClCompile Include="src\input\action\input_action.cpp" />
     <ClCompile Include="src\input\action\ia_fire.cpp" />
@@ -144,6 +143,10 @@
     <ClCompile Include="src\input\action\vector2_input_action.cpp" />
     <ClCompile Include="src\input\im_playing.cpp" />
     <ClCompile Include="src\input\input_mapping.cpp" />
+    <ClCompile Include="src\level\level.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\level\stage1.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\renderer.cpp" />
@@ -154,9 +157,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor\player.h" />
+    <ClInclude Include="src\common\range.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\common\vector2.h" />
     <ClInclude Include="src\game.h" />
-    <ClInclude Include="src\game_container.h" />
     <ClInclude Include="src\input\action\bool_input_action.h" />
     <ClInclude Include="src\input\action\ia_fire.h" />
     <ClInclude Include="src\input\action\ia_move.h" />
@@ -164,6 +170,10 @@
     <ClInclude Include="src\input\action\vector2_input_action.h" />
     <ClInclude Include="src\input\im_playing.h" />
     <ClInclude Include="src\input\input_mapping.h" />
+    <ClInclude Include="src\level\level.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\level\stage1.h" />
     <ClInclude Include="src\renderer.h" />
     <ClInclude Include="src\asset\asset_manager.h" />
