--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -141,6 +141,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\actor\machine_gun.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\actor\player.cpp" />
     <ClCompile Include="src\actor\straight_bullet.cpp">
       <SubType>
@@ -172,6 +176,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\actor\bullet_container.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\actor\machine_gun.h">
       <SubType>
       </SubType>
     </ClInclude>
