--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -150,6 +150,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\actor\weapon.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\common\color.cpp">
       <SubType>
       </SubType>
@@ -185,6 +189,10 @@
     </ClInclude>
     <ClInclude Include="src\actor\player.h" />
     <ClInclude Include="src\actor\straight_bullet.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\actor\weapon.h">
       <SubType>
       </SubType>
     </ClInclude>
