--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -133,6 +133,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\actor\actor.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\actor\bullet.cpp">
       <SubType>
       </SubType>
@@ -183,6 +187,10 @@
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\actor\actor.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\actor\bullet.h">
       <SubType>
       </SubType>
