--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -141,6 +141,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\actor\character.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\actor\machine_gun.cpp">
       <SubType>
       </SubType>
@@ -192,6 +196,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\actor\bullet.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\actor\character.h">
       <SubType>
       </SubType>
     </ClInclude>
