--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -145,6 +145,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\actor\controller.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\actor\machine_gun.cpp">
       <SubType>
       </SubType>
@@ -200,6 +204,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\actor\character.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\actor\controller.h">
       <SubType>
       </SubType>
     </ClInclude>
