--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -174,6 +174,26 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\collision\collider.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="src\collision\collision_list.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="src\collision\linear_quadtree.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="src\collision\space.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="src\common\bit.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\common\color.cpp">
       <SubType>
       </SubType>
@@ -241,6 +261,26 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\actor\weapon.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\collision\collider.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\collision\collision_list.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\collision\linear_quadtree.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\collision\space.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\common\bit.h">
       <SubType>
       </SubType>
     </ClInclude>
