--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -264,6 +264,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\common\cast.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\collision\collider.h">
       <SubType>
       </SubType>
