--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -149,6 +149,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\actor\camera.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\actor\character.cpp">
       <SubType>
       </SubType>
@@ -236,6 +240,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\actor\bullet.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\actor\camera.h">
       <SubType>
       </SubType>
     </ClInclude>
