feat: RangeにwithinRangeメソッドを追加。Vector2に演算子のオーバーロードを追加。

--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -206,6 +206,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\common\range.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\common\vector2.cpp" />
     <ClCompile Include="src\common\vector3.cpp">
       <SubType>
