--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -137,6 +137,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\actor\alien.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\actor\asteroid.cpp">
       <SubType>
       </SubType>
@@ -232,6 +236,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor\actor.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\actor\alien.h">
       <SubType>
       </SubType>
     </ClInclude>
