--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -174,6 +174,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\actor\rush_ai_controller.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\actor\straight_bullet.cpp">
       <SubType>
       </SubType>
@@ -273,6 +277,10 @@
     </ClInclude>
     <ClInclude Include="src\actor\player.h" />
     <ClInclude Include="src\actor\player_controller.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\actor\rush_ai_controller.h">
       <SubType>
       </SubType>
     </ClInclude>
