--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -345,6 +345,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\count\enemy_counter.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\gamestate\stage1_state.h">
       <SubType>
