--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -227,6 +227,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\font\font.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\gamestate\stage1_state.cpp">
       <SubType>
@@ -346,6 +350,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\count\enemy_counter.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\font\font.h">
       <SubType>
       </SubType>
     </ClInclude>
