--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -236,6 +236,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\gui\text_view.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\input\im_playing.cpp" />
     <ClCompile Include="src\input\input_mapping.cpp" />
     <ClCompile Include="src\level\level.cpp">
@@ -359,6 +363,10 @@
     </ClInclude>
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\gamestate\stage1_state.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\gui\text_view.h">
       <SubType>
       </SubType>
     </ClInclude>
