--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -236,6 +236,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\game_context.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\gui\text_view.cpp">
       <SubType>
       </SubType>
@@ -374,6 +378,10 @@
     <ClInclude Include="src\input\im_playing.h" />
     <ClInclude Include="src\input\input_mapping.h" />
     <ClInclude Include="src\level\level.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\game_context.h">
       <SubType>
       </SubType>
     </ClInclude>
