feat: レベルの種類の列挙型とレベルを開く処理のインターフェースを追加。

--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -441,6 +441,14 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\level\level_type.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\level\open_level_interface.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\level\stage1.h" />
     <ClInclude Include="src\level\title.h">
       <SubType>
