--- a/spaceshooter/spaceshooter.vcxproj
+++ b/spaceshooter/spaceshooter.vcxproj
@@ -243,6 +243,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="src\effect\explosion.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\font\font.cpp">
       <SubType>
       </SubType>
@@ -294,6 +298,10 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\asset\asset_manager.cpp" />
+    <ClCompile Include="src\texture\sprite_sheet_texture.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="src\texture\texture.cpp" />
     <ClCompile Include="src\time\timer.cpp" />
     <ClCompile Include="src\window.cpp" />
@@ -421,6 +429,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\effect\explosion.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\font\font.h">
       <SubType>
       </SubType>
@@ -480,6 +492,10 @@
     </ClInclude>
     <ClInclude Include="src\renderer.h" />
     <ClInclude Include="src\asset\asset_manager.h" />
+    <ClInclude Include="src\texture\sprite_sheet_texture.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\texture\texture.h" />
     <ClInclude Include="src\time\timer.h" />
     <ClInclude Include="src\window.h" />
